# payment

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
src/: config.py
src/app/api/: background.py  dependencies.py  docs.py  exceptions.py  lifespan.py  main.py  middlewares.py  schemas.py
src/app/api/admin/: dependencies.py  exceptions.py  handlers.py
src/app/api/invoices/: schemas.py
src/app/api/legal_entities/: schemas.py
src/domain/entities/: base.py  invoices.py  legal_entities.py
src/infrastructure/clients/base/: client.py  exceptions.py  schemas.py
src/infrastructure/clients/tinkoff/: client.py  schemas.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/sqlalchemy/: setup.py
src/infrastructure/db/sqlalchemy/models/: __init__.py  base.py  invoices.py  legal_entities.py
src/infrastructure/mappers/: base.py  invoices.py  legal_entity.py
src/infrastructure/message_brokers/: base.py  kafka.py
src/infrastructure/repositories/base/: base.py
src/infrastructure/repositories/invoices/: base.py  sqlalchemy.py
src/infrastructure/repositories/legal_entities/: base.py  sqlalchemy.py
src/infrastructure/uow/: base.py  sqlalchemy.py
src/logic/commands/: invoices.py  legal_entities.py
src/logic/exceptions/: invoices.py  legal_entities.py
src/logic/providers/: base.py  invoices.py  legal_entities.py
src/logic/usecases/: base.py  invoices.py  legal_entities.py
